objects/EWS_User__c.object
<CustomObject>
    <fields>
        <fullName>AcctMgmtEmail__c</fullName>
        <externalId>true</externalId>
        <label>AcctMgmtEmail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_FAC_del__c</fullName>
        <label>Num of FAC</label>
        <summaryForeignKey>EWS_Account__c.EWS_User__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SGUID__c</fullName>
        <externalId>true</externalId>
        <label>SGUID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <externalId>true</externalId>
        <label>User Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>EWS User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AcctMgmtEmail__c</columns>
        <columns>SGUID__c</columns>
        <columns>User_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EWS User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EWS Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>